--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -38,7 +38,9 @@
     "yes": "Ja",
     "no": "Nein",
     "language": "Sprache",
-    "newVersionAvailable": "Neue Version verfügbar. Die Seite wird aktualisiert..."
+    "newVersionAvailable": "Neue Version verfügbar. Die Seite wird aktualisiert...",
+    "back": "Zurück",
+    "goBack": "Zurück"
   },
   "public": {
     "home": {
@@ -228,6 +230,7 @@
     "profileMenu": "Profil",
     "logout": "Abmelden",
     "language": "Sprache",
+    "site": "Site",
     "login": "Anmelden",
     "register": "Registrieren",
     "registering": "Registrierung läuft...",
@@ -263,6 +266,10 @@
     "noTenants": "Keine Sites verfügbar",
     "sessionExpiring": "Sitzung läuft ab",
     "sessionExpired": "Sitzung abgelaufen. Bitte melden Sie sich erneut an.",
+    "sessionExpiringSoon": "Sitzung läuft bald ab",
+    "sessionTimeRemaining": "Verbleibende Zeit: {{time}}",
+    "extendSession": "Verlängern",
+    "extending": "Verlängern...",
     "defaultLanguage": "Standardsprache",
     "defaultLanguageDescription": "Diese Sprache wird die Standardsprache für sowohl die öffentliche als auch die Admin-Oberfläche sein.",
     "languageNames": {
@@ -330,6 +337,16 @@
       },
       "overview": {
         "title": "Grundinformationen"
+      },
+      "features": {
+        "title": "Funktionen",
+        "enableEvents": "Ereignisse aktivieren",
+        "enableBlog": "Blog / Statische Seiten aktivieren",
+        "enableStaticPages": "Statische Seiten aktivieren",
+        "isCrawlable": "Indizierbar (SEO)",
+        "saved": "Funktionen gespeichert",
+        "createInstanceFirst": "Erstellen Sie zuerst eine SiteInstance in dieser Sprache",
+        "instanceNotFound": "SiteInstance nicht gefunden"
       },
       "domain": {
         "title": "Domain & URL",
@@ -400,6 +417,10 @@
       "quickActions": "Schnellaktionen",
       "openPublicPage": "Öffentliche Seite öffnen"
     },
+    "placeActive": "Ort ist aktiv",
+    "placeInactive": "Ort ist inaktiv",
+    "placeActiveDescription": "Dieser Ort ist für Besucher sichtbar",
+    "placeInactiveDescription": "Dieser Ort ist vor Besuchern verborgen",
     "beFeaturedPlace": "Hervorgehobener Ort werden",
     "featuredPlacementNotAvailable": "Dieser Ort wird nicht in Auflistungen und auf der Karte hervorgehoben.",
     "isFeatured": "Hervorgehoben",
@@ -429,6 +450,46 @@
     "manageFeatured": "Hervorgehobene Orte verwalten",
     "subscriptionOverview": "Abonnement-Übersicht",
     "subscriptionOverviewSubtitle": "Site-Abonnements und Nutzungsdaten",
+    "subscriptionsDashboard": "Abonnements-Dashboard",
+    "subscriptionsDashboardSubtitle": "Superadmin-Abonnementverwaltung",
+    "subscriptions": {
+      "activeCount": "Aktiv",
+      "mrr": "MRR",
+      "new7d": "Neu (7 Tage)",
+      "churn7d": "Churn (7 Tage)",
+      "netChange": "Nettoänderung",
+      "expiring7d": "Läuft in 7 Tagen ab",
+      "trends": "Trends (12 Wochen)",
+      "updated": "Abonnement aktualisiert",
+      "extended": "Abonnement um 30 Tage verlängert",
+      "suspended": "Abonnement ausgesetzt",
+      "expiringEmailSubject": "Abonnement läuft ab",
+      "expiringEmailBody": "Hallo {name}, Ihr Abonnement läuft am {date} ab."
+    },
+    "search": "Suchen",
+    "all": "Alle",
+    "allPlans": "Alle Pläne",
+    "allExpiry": "Alle Ablaufzeiten",
+    "expiring": "Läuft ab",
+    "expires7d": "Läuft in 7 Tagen ab",
+    "expires14d": "Läuft in 14 Tagen ab",
+    "expires30d": "Läuft in 30 Tagen ab",
+    "entity": "Entität",
+    "owner": "Eigentümer",
+    "extend30d": "+30 Tage",
+    "suspend": "Aussetzen",
+    "open": "Öffnen",
+    "email": "E-Mail",
+    "showing": "Anzeigen",
+    "of": "von",
+    "previous": "Vorherige",
+    "next": "Nächste",
+    "noData": "Keine Daten",
+    "planFree": "Free",
+    "planBasic": "Basic",
+    "planPro": "Pro",
+    "sites": "Site",
+    "places": "Place",
     "validUntil": "Gültig bis",
     "note": "Hinweis",
     "places": "Orte",
@@ -471,6 +532,7 @@
       "siteMembershipsDesc": "Site-Mitgliedschaften verwalten",
       "placeMemberships": "Ortsmitgliedschaften",
       "placeMembershipsDesc": "Ortsmitgliedschaften verwalten",
+      "subscriptionsDesc": "Abonnements verwalten und überwachen",
       "settings": "Einstellungen",
       "settingsDesc": "Einstellungen"
     },
@@ -526,7 +588,7 @@
       "status": "Status",
       "actions": "Aktionen",
       "noData": "Keine Daten gefunden",
-      "pleaseSelectTenant": "Bitte wählen Sie eine Site"
+      "pleaseSelectSite": "Bitte wählen Sie eine Site"
     },
     "pagination": {
       "showing": "Anzeigen: {{start}}-{{end}} / {{total}}",
@@ -606,6 +668,12 @@
       "deleteTenantFailed": "Site konnte nicht gelöscht werden",
       "loadDefaultLanguageFailed": "Standardsprache konnte nicht geladen werden",
       "updateDefaultLanguageFailed": "Standardsprache konnte nicht aktualisiert werden",
+      "loadEventLogsFailed": "Ereignisprotokolle konnten nicht geladen werden",
+      "exportFailed": "Export fehlgeschlagen",
+      "loadSubscriptionSummaryFailed": "Zusammenfassung konnte nicht geladen werden",
+      "loadExpiringSubscriptionsFailed": "Ablaufende Abonnements konnten nicht geladen werden",
+      "loadSubscriptionTrendsFailed": "Trenddaten konnten nicht geladen werden",
+      "loadSubscriptionsFailed": "Abonnements konnten nicht geladen werden",
       "updateMapSettingsFailed": "Fehler beim Aktualisieren der Karteneinstellungen",
       "defaultLanguageUpdated": "Standardsprache erfolgreich aktualisiert",
       "updateRoleFailed": "Fehler beim Aktualisieren der Rolle",
@@ -638,6 +706,10 @@
       "cannotDropOnChild": "Eine Kategorie kann nicht auf ihr eigenes Kind gezogen werden",
       "categoryNotFound": "Kategorie nicht gefunden",
       "invalidCategoryIds": "Ungültige Kategorie-IDs",
+      "loadStaticPagesFailed": "Statische Seiten konnten nicht geladen werden",
+      "createStaticPageFailed": "Statische Seite konnte nicht erstellt werden",
+      "updateStaticPageFailed": "Statische Seite konnte nicht aktualisiert werden",
+      "deleteStaticPageFailed": "Statische Seite konnte nicht gelöscht werden",
       "categoriesNotFound": "Einige Kategorien wurden nicht gefunden oder gehören nicht zur Site",
       "parentCategoriesNotFound": "Einige übergeordnete Kategorien wurden nicht gefunden oder gehören nicht zur Site",
       "oneOrMoreCategoriesNotFound": "Eine oder mehrere Kategorien wurden während der Aktualisierung nicht gefunden"
@@ -830,18 +902,19 @@
     "seoDescriptionHint": "Wenn leer, werden die ersten 2 Sätze aus dem Inhalt verwendet",
     "seoImagePlaceholder": "SEO-Bild URL",
     "seoImageHint": "Wenn leer, wird das Hero-Bild verwendet",
+    "seoKeywords": "SEO-Schlüsselwörter",
     "seoKeywordsPlaceholder": "Stichwort1, Stichwort2, Stichwort3",
     "seoKeywordsHint": "Durch Komma getrennte Stichwörter für Suchmaschinen",
     "eventLog": "Ereignisprotokoll",
     "eventLog.description": "Benutzeraktivitätsprotokolle anzeigen und verwalten",
     "eventLog.filters": "Filter",
-    "eventLog.filterTenant": "Site",
+    "eventLog.filterSite": "Site",
     "eventLog.filterUser": "Benutzer",
     "eventLog.filterAction": "Aktion",
     "eventLog.filterEntityType": "Entitätstyp",
     "eventLog.filterStartDate": "Startdatum",
     "eventLog.filterEndDate": "Enddatum",
-    "eventLog.allTenants": "Alle Sites",
+    "eventLog.allSites": "Alle Sites",
     "eventLog.allUsers": "Alle Benutzer",
     "eventLog.allActions": "Alle Aktionen",
     "eventLog.allEntityTypes": "Alle Entitätstypen",
@@ -854,7 +927,7 @@
     "eventLog.deleteSuccess": "{{count}} Ereignisprotokoll(e) gelöscht",
     "eventLog.resetFilters": "Filter zurücksetzen",
     "eventLog.timestamp": "Zeitstempel",
-    "eventLog.tenant": "Site",
+    "eventLog.site": "Site",
     "eventLog.user": "Benutzer",
     "eventLog.action": "Aktion",
     "eventLog.entityType": "Entitätstyp",
@@ -881,21 +954,6 @@
       "site": "Site",
       "legalPage": "Rechtliche Seite",
       "staticPage": "Statische Seite"
-    },
-    "errors": {
-      "loadEventLogsFailed": "Ereignisprotokolle konnten nicht geladen werden",
-      "exportFailed": "Export fehlgeschlagen",
-      "deleteFailed": "Löschen fehlgeschlagen"
-    },
-    "errors": {
-      "loadStaticPagesFailed": "Statische Seiten konnten nicht geladen werden",
-      "createStaticPageFailed": "Statische Seite konnte nicht erstellt werden",
-      "updateStaticPageFailed": "Statische Seite konnte nicht aktualisiert werden",
-      "deleteStaticPageFailed": "Statische Seite konnte nicht gelöscht werden",
-      "reorderFailed": "Neuordnung fehlgeschlagen",
-      "cannotDropOnChild": "Eine Kategorie kann nicht auf ihr eigenes Kind gezogen werden",
-      "categoryNotFound": "Kategorie nicht gefunden",
-      "invalidCategoryIds": "Ungültige Kategorie-IDs"
     }
   },
   "error": {
