--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -38,7 +38,9 @@
     "yes": "Yes",
     "no": "No",
     "language": "Language",
-    "newVersionAvailable": "New version available. The page will refresh..."
+    "newVersionAvailable": "New version available. The page will refresh...",
+    "back": "Back",
+    "goBack": "Back"
   },
   "public": {
     "home": {
@@ -228,6 +230,7 @@
     "profileMenu": "Profile",
     "logout": "Logout",
     "language": "Language",
+    "site": "Site",
     "login": "Login",
     "register": "Register",
     "registering": "Registering...",
@@ -263,6 +266,10 @@
     "noTenants": "No regions available",
     "sessionExpiring": "Session expiring",
     "sessionExpired": "Session expired. Please login again.",
+    "sessionExpiringSoon": "Session expiring soon",
+    "sessionTimeRemaining": "Time remaining: {{time}}",
+    "extendSession": "Extend",
+    "extending": "Extending...",
     "defaultLanguage": "Default Language",
     "defaultLanguageDescription": "This language will be the default for both the public and admin interfaces.",
     "languageNames": {
@@ -329,6 +336,16 @@
       },
       "overview": {
         "title": "Basic Information"
+      },
+      "features": {
+        "title": "Features",
+        "enableEvents": "Enable Events",
+        "enableBlog": "Enable Blog / Static Pages",
+        "enableStaticPages": "Enable Static Pages",
+        "isCrawlable": "Indexable (SEO)",
+        "saved": "Features saved",
+        "createInstanceFirst": "First create a SiteInstance in this language",
+        "instanceNotFound": "SiteInstance not found"
       },
       "domain": {
         "title": "Domain & URL",
@@ -399,6 +416,10 @@
       "quickActions": "Quick Actions",
       "openPublicPage": "Open Public Page"
     },
+    "placeActive": "Place is Active",
+    "placeInactive": "Place is Inactive",
+    "placeActiveDescription": "This place is visible to visitors",
+    "placeInactiveDescription": "This place is hidden from visitors",
     "beFeaturedPlace": "Be a Featured Place",
     "featuredPlacementNotAvailable": "This place is not featured in listings and on the map.",
     "isFeatured": "Featured",
@@ -428,6 +449,46 @@
     "manageFeatured": "Manage Featured Places",
     "subscriptionOverview": "Subscription Overview",
     "subscriptionOverviewSubtitle": "Site subscriptions and usage data",
+    "subscriptionsDashboard": "Subscriptions Dashboard",
+    "subscriptionsDashboardSubtitle": "Superadmin subscription management",
+    "subscriptions": {
+      "activeCount": "Active",
+      "mrr": "MRR",
+      "new7d": "New (7 days)",
+      "churn7d": "Churn (7 days)",
+      "netChange": "Net Change",
+      "expiring7d": "Expiring within 7 days",
+      "trends": "Trends (12 weeks)",
+      "updated": "Subscription updated",
+      "extended": "Subscription extended by 30 days",
+      "suspended": "Subscription suspended",
+      "expiringEmailSubject": "Subscription expiring",
+      "expiringEmailBody": "Hi {name}, your subscription expires on {date}."
+    },
+    "search": "Search",
+    "all": "All",
+    "allPlans": "All plans",
+    "allExpiry": "All expiry",
+    "expiring": "Expiring",
+    "expires7d": "Expires within 7 days",
+    "expires14d": "Expires within 14 days",
+    "expires30d": "Expires within 30 days",
+    "entity": "Entity",
+    "owner": "Owner",
+    "extend30d": "+30 days",
+    "suspend": "Suspend",
+    "open": "Open",
+    "email": "Email",
+    "showing": "Showing",
+    "of": "of",
+    "previous": "Previous",
+    "next": "Next",
+    "noData": "No data",
+    "planFree": "Free",
+    "planBasic": "Basic",
+    "planPro": "Pro",
+    "sites": "Site",
+    "places": "Place",
     "validUntil": "Valid Until",
     "note": "Note",
     "places": "Places",
@@ -470,6 +531,7 @@
       "siteMembershipsDesc": "Manage site memberships",
       "placeMemberships": "Place Memberships",
       "placeMembershipsDesc": "Manage place memberships",
+      "subscriptionsDesc": "Manage subscriptions and monitoring",
       "settings": "Settings",
       "settingsDesc": "Settings"
     },
@@ -524,7 +586,7 @@
       "status": "Status",
       "actions": "Actions",
       "noData": "No data found",
-      "pleaseSelectTenant": "Please select a region"
+      "pleaseSelectSite": "Please select a site"
     },
     "pagination": {
       "showing": "Showing {{start}} to {{end}} of {{total}} entries",
@@ -603,6 +665,12 @@
       "deleteTenantFailed": "Failed to delete region",
       "loadDefaultLanguageFailed": "Failed to load default language",
       "updateDefaultLanguageFailed": "Failed to update default language",
+      "loadEventLogsFailed": "Failed to load event logs",
+      "exportFailed": "Export failed",
+      "loadSubscriptionSummaryFailed": "Failed to load summary",
+      "loadExpiringSubscriptionsFailed": "Failed to load expiring subscriptions",
+      "loadSubscriptionTrendsFailed": "Failed to load trends",
+      "loadSubscriptionsFailed": "Failed to load subscriptions",
       "updateMapSettingsFailed": "Failed to update map settings",
       "defaultLanguageUpdated": "Default language updated successfully",
       "updateRoleFailed": "Failed to update role",
@@ -827,18 +895,19 @@
     "seoDescriptionHint": "If empty, the first 2 sentences from content will be used",
     "seoImagePlaceholder": "SEO image URL",
     "seoImageHint": "If empty, the hero image will be used",
+    "seoKeywords": "SEO Keywords",
     "seoKeywordsPlaceholder": "keyword1, keyword2, keyword3",
     "seoKeywordsHint": "Comma-separated keywords for search engines",
     "eventLog": "Event Log",
     "eventLog.description": "View and manage user activity logs",
     "eventLog.filters": "Filters",
-    "eventLog.filterTenant": "Site",
+    "eventLog.filterSite": "Site",
     "eventLog.filterUser": "User",
     "eventLog.filterAction": "Action",
     "eventLog.filterEntityType": "Entity Type",
     "eventLog.filterStartDate": "Start Date",
     "eventLog.filterEndDate": "End Date",
-    "eventLog.allTenants": "All Sites",
+    "eventLog.allSites": "All Sites",
     "eventLog.allUsers": "All Users",
     "eventLog.allActions": "All Actions",
     "eventLog.allEntityTypes": "All Entity Types",
@@ -851,7 +920,7 @@
     "eventLog.deleteSuccess": "Deleted {{count}} event log(s)",
     "eventLog.resetFilters": "Reset Filters",
     "eventLog.timestamp": "Timestamp",
-    "eventLog.tenant": "Site",
+    "eventLog.site": "Site",
     "eventLog.user": "User",
     "eventLog.action": "Action",
     "eventLog.entityType": "Entity Type",
@@ -878,19 +947,6 @@
       "site": "Site",
       "legalPage": "Legal Page",
       "staticPage": "Static Page"
-    },
-    "errors": {
-      "loadEventLogsFailed": "Failed to load event logs",
-      "exportFailed": "Failed to export",
-      "deleteFailed": "Failed to delete",
-      "loadStaticPagesFailed": "Failed to load static pages",
-      "createStaticPageFailed": "Failed to create static page",
-      "updateStaticPageFailed": "Failed to update static page",
-      "deleteStaticPageFailed": "Failed to delete static page",
-      "reorderFailed": "Failed to reorder",
-      "cannotDropOnChild": "Cannot drop a category on its own child",
-      "categoryNotFound": "Category not found",
-      "invalidCategoryIds": "Invalid category IDs"
     }
   },
   "error": {
