--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -38,7 +38,9 @@
     "yes": "Igen",
     "no": "Nem",
     "language": "Nyelv",
-    "newVersionAvailable": "Új verzió érhető el. Az oldal frissül..."
+    "newVersionAvailable": "Új verzió érhető el. Az oldal frissül...",
+    "back": "Vissza",
+    "goBack": "Vissza"
   },
   "public": {
     "home": {
@@ -288,6 +290,10 @@
     "noSites": "Nincs elérhető site",
     "sessionExpiring": "Munkamenet lejár",
     "sessionExpired": "Munkamenet lejárt. Kérlek jelentkezz be újra.",
+    "sessionExpiringSoon": "Munkamenet hamarosan lejár",
+    "sessionTimeRemaining": "Hátralévő idő: {{time}}",
+    "extendSession": "Hosszabbítom",
+    "extending": "Hosszabbítás...",
     "defaultLanguage": "Alapértelmezett nyelv",
     "defaultLanguageDescription": "Ez a nyelv lesz az alapértelmezett a public felületen és az admin felületen is.",
     "languageNames": {
@@ -458,8 +464,8 @@
     "billingUpdated": "A számlázási információk sikeresen frissítve",
     "errorUpdatingBilling": "Hiba történt a számlázási információk frissítésekor",
     "saveBilling": "Változások mentése",
-    "placeActive": "✓ Hely aktív",
-    "placeInactive": "✗ Hely inaktív",
+    "placeActive": "Hely aktív",
+    "placeInactive": "Hely inaktív",
     "placeActiveDescription": "Ez a hely látható a látogatók számára",
     "placeInactiveDescription": "Ez a hely rejtve van a látogatók elől",
     "billingManagement": "Számlázás kezelése",
@@ -481,6 +487,46 @@
     "manageFeatured": "Kiemelések kezelése",
     "subscriptionOverview": "Előfizetések áttekintése",
     "subscriptionOverviewSubtitle": "Site-ok előfizetései és használati adatai",
+    "subscriptionsDashboard": "Előfizetések Dashboard",
+    "subscriptionsDashboardSubtitle": "Superadmin előfizetés kezelés",
+    "subscriptions": {
+      "activeCount": "Aktív",
+      "mrr": "MRR",
+      "new7d": "Új (7 nap)",
+      "churn7d": "Churn (7 nap)",
+      "netChange": "Nettó változás",
+      "expiring7d": "Lejár 7 napon belül",
+      "trends": "Tendencia (12 hét)",
+      "updated": "Előfizetés frissítve",
+      "extended": "Előfizetés 30 nappal meghosszabbítva",
+      "suspended": "Előfizetés felfüggesztve",
+      "expiringEmailSubject": "Előfizetés lejár",
+      "expiringEmailBody": "Szia {name}, az előfizetésed {date}-án lejár."
+    },
+    "search": "Keresés",
+    "all": "Mind",
+    "allPlans": "Minden csomag",
+    "allExpiry": "Minden lejárat",
+    "expiring": "Lejáró",
+    "expires7d": "Lejár 7 napon belül",
+    "expires14d": "Lejár 14 napon belül",
+    "expires30d": "Lejár 30 napon belül",
+    "entity": "Entitás",
+    "owner": "Tulajdonos",
+    "extend30d": "+30 nap",
+    "suspend": "Felfüggeszt",
+    "open": "Megnyit",
+    "email": "Email",
+    "showing": "Megjelenítve",
+    "of": "összesen",
+    "previous": "Előző",
+    "next": "Következő",
+    "noData": "Nincs adat",
+    "planFree": "Free",
+    "planBasic": "Basic",
+    "planPro": "Pro",
+    "sites": "Site",
+    "places": "Place",
     "plan": "Csomag",
     "status": "Státusz",
     "validUntil": "Érvényes",
@@ -502,6 +548,16 @@
       },
       "overview": {
         "title": "Alap adatok"
+      },
+      "features": {
+        "title": "Funkciók",
+        "enableEvents": "Események engedélyezése",
+        "enableBlog": "Blog / Statikus oldalak engedélyezése",
+        "enableStaticPages": "Statikus oldalak engedélyezése",
+        "isCrawlable": "Indexelhető (SEO)",
+        "saved": "Funkciók mentve",
+        "createInstanceFirst": "Először hozz létre egy SiteInstance-t ezen a nyelven",
+        "instanceNotFound": "SiteInstance nem található"
       },
       "subscription": {
         "title": "Előfizetés",
@@ -584,6 +640,7 @@
       "siteMembershipsDesc": "Site tagságok kezelése",
       "placeMemberships": "Hely tagságok",
       "placeMembershipsDesc": "Hely tagságok kezelése",
+      "subscriptionsDesc": "Előfizetések kezelése és monitoring",
       "settings": "Beállítások",
       "settingsDesc": "Beállítások"
     },
@@ -637,7 +694,7 @@
       "actions": "Műveletek",
       "noData": "Nincs adat",
       "noSearchResults": "Nincs találat a keresésre",
-      "pleaseSelectTenant": "Kérjük, válassz site-ot"
+      "pleaseSelectSite": "Kérjük, válassz site-ot"
     },
     "searchPlaceholder": "Keresés név vagy hely szerint...",
     "searchPlaceholders": {
@@ -730,6 +787,12 @@
       "updateSiteFailed": "A site frissítése sikertelen",
       "deleteSiteFailed": "A site törlése sikertelen",
       "loadDefaultLanguageFailed": "Az alapértelmezett nyelv betöltése sikertelen",
+      "loadEventLogsFailed": "Az esemény naplók betöltése sikertelen",
+      "exportFailed": "Az exportálás sikertelen",
+      "loadSubscriptionSummaryFailed": "Az összefoglaló betöltése sikertelen",
+      "loadExpiringSubscriptionsFailed": "A lejáró előfizetések betöltése sikertelen",
+      "loadSubscriptionTrendsFailed": "A trend adatok betöltése sikertelen",
+      "loadSubscriptionsFailed": "Az előfizetések betöltése sikertelen",
       "updateDefaultLanguageFailed": "Az alapértelmezett nyelv frissítése sikertelen",
       "updateMapSettingsFailed": "A térkép beállítások frissítése sikertelen",
       "defaultLanguageUpdated": "Az alapértelmezett nyelv sikeresen frissítve",
@@ -937,18 +1000,19 @@
     "seoDescriptionHint": "Ha üres, akkor az első 2 mondat a tartalomból",
     "seoImagePlaceholder": "SEO kép URL",
     "seoImageHint": "Ha üres, akkor a hero kép lesz használva",
+    "seoKeywords": "SEO Kulcsszavak",
     "seoKeywordsPlaceholder": "kulcsszó1, kulcsszó2, kulcsszó3",
     "seoKeywordsHint": "Vesszővel elválasztott kulcsszavak a keresőmotorok számára",
     "eventLog": "Esemény napló",
     "eventLog.description": "Felhasználói tevékenység naplók megtekintése és kezelése",
     "eventLog.filters": "Szűrők",
-    "eventLog.filterTenant": "Site",
+    "eventLog.filterSite": "Site",
     "eventLog.filterUser": "Felhasználó",
     "eventLog.filterAction": "Művelet",
     "eventLog.filterEntityType": "Entitás típus",
     "eventLog.filterStartDate": "Kezdő dátum",
     "eventLog.filterEndDate": "Befejező dátum",
-    "eventLog.allTenants": "Összes site",
+    "eventLog.allSites": "Összes site",
     "eventLog.allUsers": "Összes felhasználó",
     "eventLog.allActions": "Összes művelet",
     "eventLog.allEntityTypes": "Összes entitás típus",
@@ -961,7 +1025,7 @@
     "eventLog.deleteSuccess": "{{count}} esemény napló törölve",
     "eventLog.resetFilters": "Szűrők törlése",
     "eventLog.timestamp": "Időbélyeg",
-    "eventLog.tenant": "Site",
+    "eventLog.site": "Site",
     "eventLog.user": "Felhasználó",
     "eventLog.action": "Művelet",
     "eventLog.entityType": "Entitás típus",
@@ -988,11 +1052,6 @@
       "site": "Site",
       "legalPage": "Jogi oldal",
       "staticPage": "Statikus oldal"
-    },
-    "errors": {
-      "loadEventLogsFailed": "Az esemény naplók betöltése sikertelen",
-      "exportFailed": "Az exportálás sikertelen",
-      "deleteFailed": "A törlés sikertelen"
     }
   },
   "validation": {
